--- a/layouts/tokens/list.html
+++ b/layouts/tokens/list.html
@@ -18,34 +18,24 @@
         <thead>
           <tr>
             <th>Token</th>
-            <th>Risk</th>
-            <th>Valuation*</th>
-            <th>Platform</th>
+            <th>Year</th>
+            <th>Market Cap*</th>
+            <th>Price USD</th>
             <th>Industry</th>
-            <th>Start</th>
-            <th>End</th>
-            <th>Links</th>
+            <th>Type</th>
+            <th>Description</th>
           </tr>
         </thead>
         <tbody>
           {{ range $.Site.Data.tokens }}
             <tr>
-              <td class="token-name" style="background-image: url('/images/{{ index $.Site.Data.images.hash (printf "token-logos/%s.png" .Params.name | lower) }}');"><a href="{{ .URL }}" class="token-link">{{ .name }}</a></td>
-              <td class="text-uppercase">{{ .risk }}</td>
-              <td>{{ .valuation }}</td>
-              <td>{{ .platform }}</td>
+              <td class="token-name" style="background-image: url('/images/{{ index $.Site.Data.images.hash (printf "token-logos/%s.png" .Params.name | lower) }}');"><span class="label-emphasis">{{ .name }}</span></td>
+              <td>{{ .year }}</td>
+              <td class="label-emphasis">{{ .marketCap }}</td>
+              <td class="label-emphasis">{{ .priceUsd }}</td>
               <td>{{ .industry }}</td>
-              <td>{{ .startDate | dateFormat "02/01/2006" }}</td>
-              <td>{{ .endDate | dateFormat "02/01/2006" }}</td>
-              <td>
-                <div class="token-social-links">
-                  {{ if isset .links "twitter" }}<a href="https://twitter.com/{{ .links.twitter }}" target="_blank"><i class="fa fa-twitter fa-lg" aria-hidden="true"></i></a>{{ end }}
-                  {{ if isset .links "reddit" }}<a href="https://www.reddit.com/r/{{ .links.reddit }}" target="_blank"><i class="fa fa-reddit fa-lg" aria-hidden="true"></i></a>{{ end }}
-                  {{ if isset .links "github" }}<a href="https://github.com/{{ .links.github }}" target="_blank"><i class="fa fa-github fa-lg" aria-hidden="true"></i></a>{{ end }}
-                  {{ if isset .links "telegram" }}<a href="https://t.me/{{ .links.telegram }}" target="_blank"><i class="fa fa-telegram fa-lg" aria-hidden="true"></i></a>{{ end }}
-                  {{ if isset .links "slack" }}<a href="https://{{ .links.slack }}.slack.com/" target="_blank"><i class="fa fa-slack fa-lg" aria-hidden="true"></i></a>{{ end }}
-                </div>
-              </td>
+              <td>{{ .type }}</td>
+              <td class="token-description">{{ .description }}</td>
             </tr>
           {{ end }}
         </tbody>
