--- a/src/scss/components/_token-table.scss
+++ b/src/scss/components/_token-table.scss
@@ -4,17 +4,26 @@
     vertical-align: middle;
   }
 
+  th {
+    border-top: none;
+  }
+
   .token-name {
     background: no-repeat 10px center;
     background-size: 40px;
     padding-left: 60px !important;
   }
 
-  .token-link {
-    font-weight: bold;
+  .label-emphasis {
+    font-weight: 400;
   }
 
   .token-social-links {
     min-width: 70px;
+  }
+
+  .token-description {
+    font-size: 12px;
+    text-align: justify;
   }
 }
