--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -9,7 +9,8 @@
 @import 'base/fonts';
 @import 'components/hero';
 @import 'components/token-table';
-@import 'components/card';
+@import 'components/flex-row';
+@import 'components/exchange-card';
 @import 'pages/token-sales';
 @import 'pages/token-detail';
 @import 'layout/header';
