--- a/src/scss/pages/_token-detail.scss
+++ b/src/scss/pages/_token-detail.scss
@@ -43,32 +43,20 @@
   }
 }
 
-.table-overview, .table-trust, .table-token, .table-rating {
-  th, td {
-    border: none;
-  }
+.indicator-value {
+  text-align: center;
+  vertical-align: middle;
+  font-size: 22px;
+  font-weight: 400;
+  color: #6f8691;
 }
 
-.table-rating {
-  th, td {
-    vertical-align: middle;
-  }
-
-  &__value {
-    text-align: center;
-    vertical-align: middle;
-    font-size: 22px;
-    font-weight: 400;
-    color: #6f8691;
-  }
-
-  &__rating {
-    text-align: center;
-    vertical-align: middle;
-    font-size: 22px;
-    font-weight: 400;
-    color: #6f8691;
-  }
+.indicator-rating {
+  text-align: center;
+  vertical-align: middle;
+  font-size: 22px;
+  font-weight: 400;
+  color: #6f8691;
 }
 
 .deal-table {
@@ -76,6 +64,10 @@
     display: block;
     width: 100%;
     overflow-x: auto;
+  }
+
+  th {
+  	border-top: none;
   }
 
   tbody > tr:last-child td {
