--- a/src/scss/components/_exchange-card.scss
+++ b/src/scss/components/_exchange-card.scss
@@ -1,6 +1,30 @@
 .exchange-card {
-	.card-title {
-		font-weight: 500;
+	.card-header {
+		display: flex;
+		align-items: center;
+
+		.exchange-logo {
+			margin-right: auto;
+			background: no-repeat center;
+    	background-size: 50px;
+    	width: 50px;
+    	height: 50px;
+		}
+
+		h2 {
+			margin: 0;
+			white-space: nowrap;
+		}
+
+		.corner-text {
+			margin-left: auto;
+			line-height: 30px;
+			color: #f0c231;
+			font-weight: 500;
+			background: no-repeat 5px center;
+    	background-size: 30px;
+    	padding-left: 40px !important;
+		}
 	}
 
 	.exchange-specs {
