--- a/src/scss/components/_exchange-card.scss
+++ b/src/scss/components/_exchange-card.scss
@@ -7,8 +7,11 @@
 			margin-right: auto;
 			background: no-repeat center;
     	background-size: 50px;
-    	width: 50px;
-    	height: 50px;
+    	background-color: #fff;
+    	width: 55px;
+    	height: 55px;
+    	border: 1px solid #ddd;
+    	border-radius: .25rem;
 		}
 
 		h2 {
