--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -7,10 +7,12 @@
 
 @import 'base/base';
 @import 'base/fonts';
+@import 'components/banner';
 @import 'components/hero';
 @import 'components/token-table';
 @import 'components/flex-row';
 @import 'components/exchange-card';
+@import 'pages/landing-page';
 @import 'pages/token-sales';
 @import 'pages/token-detail';
 @import 'layout/header';
