--- a/src/scss/layout/_footer.scss
+++ b/src/scss/layout/_footer.scss
@@ -1,40 +1,80 @@
 .footer {
-  display: flex;
-  border-top: 1px solid #eee;
-  margin: 100px 0;
-  padding: 0 28px;
-  padding-top: 24px;
-  font-size: 13px;
-  color: rgba(0, 0, 0, 0.5);
+	margin-top: 100px;
+	padding: 80px 0 50px;
+	background: #2c3e50;
+	color: #ecf0f1;
 
-  p {
-    order: 1;
-  }
+  .footer-logo {
+  	> a {
+	    color: #FFF;
+	    font-size: 24px;
+	    font-weight: bold;
+	    line-height: 50px;
+	    margin-bottom: 50px;
+	    background: no-repeat 10px center;
+	    background-size: 50px;
+	    padding-left: 70px;
+	    display: block;
 
-  nav {
-    order: 2;
-    margin-left: auto;
-    ul {
-      display: flex;
-      list-style: none;
-      li {
-        margin-left: 20px;
+	    &:hover {
+	    	color: $brand-primary;
+	    	text-decoration: none;
+	    }
+  	}
+	}
 
-        span {
-          font-weight: bold;
-          color: $brand-primary;
-        }
+	.footer-nav-title {
+		margin: 20px 0;
+		color: #bdc3c7;
+	  font-size: 12px;
+	  letter-spacing: .08em;
+	  text-transform: uppercase;
+	}
 
-        a {
-          color: rgba(0, 0, 0, 0.65);
-          text-decoration: none;
-        }
+	.footer-nav {
+		margin-bottom: 0;
+    padding-left: 0;
+    list-style: none;
 
-        a:hover {
-          color: #000;
-          text-decoration: underline;
-        }
-      }
+    &:before {
+    	content: " ";
+    	display: table;
     }
-  }
+
+    > li {
+			position: relative;
+    	display: block;
+    }
+
+    a {
+    	color: #ecf0f1;
+	    font-size: 16px;
+	    font-weight: 400;
+	    padding: .1875em 0;
+	    margin-bottom: .75em;
+	    display: inline-block;
+
+	    &:hover {
+	    	color: $brand-primary;
+	    	text-decoration: none;
+	    }
+    }
+	}
+
+	.col-social {
+		margin-top: 30px;
+
+		li {
+    	float: left!important;
+    	padding-left: 15px;
+
+    	&:first-child {
+				padding-left: 0px;
+    	}
+		}
+	}
+
+	nav {
+		display: block;
+	}
 }
